--- a/style.css
+++ b/style.css
@@ -22,8 +22,11 @@ label {
 }
 
 button {
+    margin-top: 1rem;
     padding: 1rem;
     border: none;
+    background-color: rgb(53, 211, 53);
+    font-size: 1.5em;
 }
 
 .save {
